--- a/Pages/message.html
+++ b/Pages/message.html
@@ -75,14 +75,14 @@
                 My Workshop
               </div>
               <br />
-              <div id="dashboard-content-flex-first">
-                <img src="../Assets/user-green@2x.png" width="30" alt="" />
+              <div class="dashboard-content-flex">
+                <img src="../Assets/user@2x.png" width="30" alt="" />
                 Edit Profile
               </div>
               <br />
-              <div class="dashboard-content-flex">
+              <div id="dashboard-content-flex-first">
                 <img
-                  src="../Assets/conversation (1)@2x.png"
+                  src="../Assets/conversation-green@2x.png"
                   width="30"
                   alt=""
                 />
@@ -146,7 +146,44 @@
             </div>
             <div class="message-div">
               <div class="blue-bg"></div>
-              <div class="message-sub-div">hello</div>
+              <div class="message-sub-div">
+                <div class="msg-incoming">
+                  <p class="msg-p">
+                    UX refers to the term ‘User Experience’ while ‘UI’ refers to
+                    ‘User Interface’ and both of these elements are crucial for
+                    product development. But despite their professional
+                  </p>
+                </div>
+                <p><span class="top">12.02.19 . 12.30 PM</span></p>
+                <div class="msg-outgoing">
+                  <p class="msg-p">
+                    UX refers to the term ‘User Experience’ while ‘UI’ refers to
+                    ‘User Interface’ and both of these elements are crucial for
+                    product development. But despite their professional
+                  </p>
+                </div>
+                <p><span class="bottom">12.02.19 . 12.30 PM</span></p>
+                <div class="msg-incoming msg-incoming-2">
+                  <p class="msg-p">
+                    UX refers to the term ‘User Experience’ while ‘UI’ refers to
+                    ‘User Interface’ and both of these elements are crucial for
+                    product development. But despite their professional
+                  </p>
+                </div>
+                <p><span class="top">12.02.19 . 12.30 PM</span></p>
+                <div class="msg-outgoing">
+                  <p class="msg-p">
+                    UX refers to the term ‘User Experience’ while ‘UI’ refers to
+                    ‘User Interface’ and both of these elements are crucial for
+                    product development. But despite their professional
+                  </p>
+                </div>
+                <p><span class="bottom">12.02.19 . 12.30 PM</span></p>
+              </div>
+              <div class="type-box">
+                <div><input type="text" placeholder="Type your message" /></div>
+                <div><i class="fas fa-paper-plane fa-2x"></i></div>
+              </div>
             </div>
           </div>
         </div>
