--- a/Pages/message.html
+++ b/Pages/message.html
@@ -75,7 +75,7 @@
                 My Workshop
               </div>
               <br />
-              <div class="dashboard-content-flex">
+              <div id="profile-btn" class="dashboard-content-flex">
                 <img src="../Assets/user@2x.png" width="30" alt="" />
                 Edit Profile
               </div>
@@ -201,6 +201,9 @@
       };
       document.getElementById("workshop-btn").onclick = function () {
         location.href = "./workshop.html";
+      };
+      document.getElementById("profile-btn").onclick = function () {
+        location.href = "./profile.html";
       };
     </script>
   </body>
