--- a/Pages/profile.html
+++ b/Pages/profile.html
@@ -80,7 +80,7 @@
                 Edit Profile
               </div>
               <br />
-              <div class="dashboard-content-flex">
+              <div id="msg-btn" class="dashboard-content-flex">
                 <img
                   src="../Assets/conversation (1)@2x.png"
                   width="30"
@@ -173,6 +173,10 @@
       document.getElementById("workshop-btn").onclick = function () {
         location.href = "./workshop.html";
       };
+      document.getElementById("msg-btn").onclick = function () {
+        location.href = "./message.html";
+      };
+      
     </script>
   </body>
 </html>
