--- a/Pages/workshop.html
+++ b/Pages/workshop.html
@@ -80,7 +80,7 @@
                 Edit Profile
               </div>
               <br />
-              <div class="dashboard-content-flex">
+              <div id="msg-btn" class="dashboard-content-flex">
                 <img
                   src="../Assets/conversation (1)@2x.png"
                   width="30"
@@ -153,6 +153,9 @@
       };
       document.getElementById("profile-btn").onclick = function () {
         location.href = "./profile.html";
+      };
+      document.getElementById("msg-btn").onclick = function () {
+        location.href = "./message.html";
       };
     </script>
   </body>
