--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                 Edit Profile
               </div>
               <br />
-              <div class="dashboard-content-flex">
+              <div id="msg-btn" class="dashboard-content-flex">
                 <img src="./Assets/conversation (1)@2x.png" width="30" alt="" />
                 Message
               </div>
