--- a/Pages/message.html
+++ b/Pages/message.html
@@ -96,7 +96,8 @@
         <div class="fourth-page-content">
           <div class="chat-div">
             <div class="user-div">
-              <input type="text" placeholder="🔍 Search" />
+              <i class="fas fa-search"></i>
+              <input type="text" placeholder="Search" />
               <div class="message-user-group">
                 <div class="message-user-group-each-first">
                   <img src="../Assets/img.JPEG" width="50" alt="" />
