--- a/Pages/message.html
+++ b/Pages/message.html
@@ -100,7 +100,7 @@
               <input type="text" placeholder="Search" />
               <div class="message-user-group">
                 <div class="message-user-group-each-first">
-                  <img src="../Assets/img.JPEG" width="50" alt="" />
+                  <img src="../Assets/chat1.jpg" width="50" alt="" />
                   <div>
                     <h5>
                       Contact Name One <span class="span span-first">Now</span>
@@ -112,7 +112,7 @@
                   </div>
                 </div>
                 <div class="message-user-group-each">
-                  <img src="../Assets/img.JPEG" width="50" alt="" />
+                  <img src="../Assets/chat2.jpg" width="50" alt="" />
                   <div>
                     <h5>Contact Name One <span class="span">2h ago</span></h5>
                     <p>
@@ -135,7 +135,7 @@
                   </div>
                 </div>
                 <div class="message-user-group-each">
-                  <img src="../Assets/img.JPEG" width="50" alt="" />
+                  <img src="../Assets/chat4.jpg" width="50" alt="" />
                   <div>
                     <h5>Contact Name One <span class="span">11 Mar</span></h5>
                     <p>
