--- a/Pages/login.html
+++ b/Pages/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<link rel="stylesheet" href="../Styles/login.css" />
+<link rel="stylesheet" href="../styles.css" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700;800&display=swap"
@@ -28,10 +28,10 @@
       <div class="navbar">
         <div><img src="../Assets/logo.PNG" width="177" alt="" /></div>
         <div class="nav-links">
-          <p><span>home</span></p>
-          <p>training</p>
-          <p>video lessons</p>
-          <p>earn with upskill</p>
+          <a href="../index.html"><span>home</span></a>
+          <a href="#">training</a>
+          <a href="#">video lessons</a>
+          <a href="#">earn with upskill</a>
         </div>
         <div class="user-group">
           <div id="sign-in-btn" class="sign-in-group">
